@@ -47,6 +47,10 @@ Azalea_OBJC_FILES = \
 	translate.m \
 	window.m 
 
+Azalea_RESOURCE_FILES = \
+	Resources/openbox \
+	Resources/themes
+
 #ADDITIONAL_=-DDEBUG=1
 
 ADDITIONAL_INCLUDE_DIRS += `pkg-config --cflags freetype2` `pkg-config --cflags libxml-2.0` `pkg-config --cflags fontconfig` -I..
