@@ -1,0 +1,345 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<openbox_config xmlns="http://openbox.org/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://openbox.org/                 file:///usr/share/openbox/rc.xsd">
+
+<resistance>
+  <strength>10</strength>
+  <screen_edge_strength>20</screen_edge_strength>
+</resistance>
+
+<focus>
+  <focusNew>yes</focusNew>
+  <followMouse>no</followMouse>
+  <focusLast>no</focusLast>
+  <focusDelay>0</focusDelay>
+  <raiseOnFocus>no</raiseOnFocus>
+</focus>
+
+<theme>
+  <name>Azalea</name>
+  <titlelayout>NLIMC</titlelayout>
+</theme>
+
+<placement>
+  <policy>Smart</policy>
+</placement>
+
+<desktops>
+  <number>4</number>
+  <firstdesk>1</firstdesk>
+  <names><name>Main</name><name>Second</name><name>Third</name><name>Fourth</name></names>
+</desktops>
+
+<resize>
+  <drawContents>yes</drawContents>
+</resize>
+
+<dock>
+  <position>Right</position>
+  <stacking>Top</stacking>
+  <direction>Vertical</direction>
+  <floatingX>0</floatingX>
+  <floatingY>0</floatingY>
+  <autoHide>no</autoHide>
+  <hideDelay>300</hideDelay>
+  <moveButton>A-Left</moveButton>
+</dock>
+
+<keyboard>
+  <chainQuitKey>C-g</chainQuitKey>
+
+  <keybind key="A-F10">
+    <action name="MaximizeFull"/>
+  </keybind>
+  <keybind key="A-F5">
+    <action name="UnmaximizeFull"/>
+  </keybind>
+  <keybind key="A-F12">
+    <action name="ToggleShade"/>
+  </keybind>
+  <keybind key="C-A-Left">
+    <action name="DesktopLeft"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="C-A-Right">
+    <action name="DesktopRight"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="C-A-Up">
+    <action name="DesktopUp"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="C-A-Down">
+    <action name="DesktopDown"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="S-A-Left">
+    <action name="SendToDesktopLeft"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="S-A-Right">
+    <action name="SendToDesktopRight"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="S-A-Up">
+    <action name="SendToDesktopUp"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="S-A-Down">
+    <action name="SendToDesktopDown"><wrap>no</wrap></action>
+  </keybind>
+  <keybind key="C-A-d">
+    <action name="ToggleShowDesktop"/>
+  </keybind>
+  <keybind key="A-F4">
+    <action name="Close"/>
+  </keybind>
+  <keybind key="A-Tab">
+    <action name="NextWindow"/>
+  </keybind>
+  <keybind key="A-S-Tab">
+    <action name="PreviousWindow"/>
+  </keybind>
+  <keybind key="A-F7">
+    <action name="Move"/>
+  </keybind>
+  <keybind key="A-F8">
+    <action name="Resize"/>
+  </keybind>
+  <keybind key="A-F9">
+    <action name="Iconify"/>
+  </keybind>
+  <keybind key="A-space">
+    <action name="ShowMenu"><menu>client-menu</menu></action>
+  </keybind>
+  <keybind key="C-space">
+    <keybind key="r">
+      <action name="ShowMenu"><menu>root-menu</menu></action>
+    </keybind>
+  </keybind>
+</keyboard>
+
+<mouse>
+  <dragThreshold>3</dragThreshold>
+  <doubleClickTime>200</doubleClickTime>
+
+  <context name="Frame">
+    <mousebind button="A-Left" action="Drag">
+      <action name="Move"/>
+    </mousebind>
+    <mousebind button="A-Left" action="Click">
+      <action name="Raise"/>
+    </mousebind>
+    <mousebind button="A-Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="A-Middle" action="Drag">
+      <action name="Resize"/>
+    </mousebind> 
+    <mousebind button="A-Middle" action="Click">
+      <action name="Lower"/>
+    </mousebind>
+    <mousebind button="A-Right" action="Press">
+      <action name="ShowMenu"><menu>client-menu</menu></action>
+    </mousebind>
+    <mousebind button="A-Up" action="Click">
+      <action name="DesktopPrevious"/>
+    </mousebind>
+    <mousebind button="A-Down" action="Click">
+      <action name="DesktopNext"/>
+    </mousebind>
+    <mousebind button="C-A-Up" action="Click">
+      <action name="SendToDesktopPrevious"/>
+    </mousebind>
+    <mousebind button="C-A-Down" action="Click">
+      <action name="SendToDesktopNext"/>
+    </mousebind>
+  </context>
+  <context name="Titlebar">
+    <mousebind button="Left" action="Drag">
+      <action name="Move"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="Raise"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="DoubleClick">
+      <action name="ToggleShade"/>
+    </mousebind>
+    <mousebind button="Middle" action="Press">
+      <action name="Lower"/>
+    </mousebind>
+    <mousebind button="Up" action="Click">
+      <action name="Shade"/>
+    </mousebind>
+    <mousebind button="Down" action="Click">
+      <action name="Unshade"/>
+    </mousebind>
+    <mousebind button="Right" action="Press">
+      <action name="ShowMenu"><menu>client-menu</menu></action>
+    </mousebind>
+  </context>
+  <context name="Handle">
+    <mousebind button="Left" action="Drag">
+      <action name="Move"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="Raise"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Middle" action="Press">
+      <action name="Lower"/>
+    </mousebind>
+  </context>
+  <context name="BLCorner">
+    <mousebind button="Left" action="Drag">
+      <action name="Resize"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+  </context>
+  <context name="BRCorner">
+    <mousebind button="Left" action="Drag">
+      <action name="Resize"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+  </context>
+  <context name="TLCorner">
+    <mousebind button="Left" action="Drag">
+      <action name="Resize"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+  </context>
+  <context name="TRCorner">
+    <mousebind button="Left" action="Drag">
+      <action name="Resize"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+  </context>
+  <context name="Client">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+      <action name="Raise"/>
+    </mousebind>
+    <mousebind button="Middle" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Right" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+  </context>
+  <context name="Icon">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Right" action="Press">
+      <action name="ShowMenu"><menu>client-menu</menu></action>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="ShowMenu"><menu>client-menu</menu></action>
+    </mousebind>
+  </context>
+  <context name="AllDesktops">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="ToggleOmnipresent"/>
+    </mousebind>
+  </context>
+  <context name="Shade">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="ToggleShade"/>
+    </mousebind>
+  </context>
+  <context name="Iconify">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="Iconify"/>
+    </mousebind>
+  </context>
+  <context name="Maximize">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Middle" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Right" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="ToggleMaximizeFull"/>
+    </mousebind>
+    <mousebind button="Middle" action="Click">
+      <action name="ToggleMaximizeVert"/>
+    </mousebind>
+    <mousebind button="Right" action="Click">
+      <action name="ToggleMaximizeHorz"/>
+    </mousebind>
+  </context>
+  <context name="Close">
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+    </mousebind>
+    <mousebind button="Left" action="Click">
+      <action name="Close"/>
+    </mousebind>
+  </context>
+  <context name="Desktop">
+    <mousebind button="Up" action="Press">
+      <action name="DesktopPrevious"/>
+    </mousebind>
+    <mousebind button="Down" action="Press">
+      <action name="DesktopNext"/>
+    </mousebind>
+    <mousebind button="A-Up" action="Press">
+      <action name="DesktopPrevious"/>
+    </mousebind>
+    <mousebind button="A-Down" action="Press">
+      <action name="DesktopNext"/>
+    </mousebind>
+    <mousebind button="Left" action="Press">
+      <action name="Focus"/>
+      <action name="Raise"/>
+    </mousebind> 
+    <mousebind button="Middle" action="Press">
+      <action name="ShowMenu"><menu>client-list-menu</menu></action>
+    </mousebind> 
+    <mousebind button="Right" action="Press">
+      <action name="ShowMenu"><menu>root-menu</menu></action>
+    </mousebind>
+  </context>
+  <context name="MoveResize">
+    <mousebind button="Up" action="Press">
+      <action name="DesktopPrevious"/>
+    </mousebind>
+    <mousebind button="Down" action="Press">
+      <action name="DesktopNext"/>
+    </mousebind>
+    <mousebind button="A-Up" action="Press">
+      <action name="DesktopPrevious"/>
+    </mousebind>
+    <mousebind button="A-Down" action="Press">
+      <action name="DesktopNext"/>
+    </mousebind>
+  </context>
+</mouse>
+
+<menu>
+  <!-- You can specify more than one menu file in here and they are all loaded,
+       just don't make menu ids clash or, well, it'll be kind of pointless -->
+
+  <!-- default menu file (or custom one in $HOME/.config/openbox/) -->
+  <file>menu.xml</file>
+</menu>
+
+</openbox_config>
