@@ -1,0 +1,4 @@
+#define bullet_width 4
+#define bullet_height 7
+static unsigned char bullet_bits[] = {
+   0x01, 0x03, 0x07, 0x0f, 0x07, 0x03, 0x01 };
