@@ -1,0 +1,4 @@
+#define close_width 8
+#define close_height 8
+static unsigned char close_bits[] = {
+   0xc3, 0xe7, 0x7e, 0x3c, 0x3c, 0x7e, 0xe7, 0xc3 };
