@@ -1,0 +1,4 @@
+#define desk_width 8
+#define desk_height 8
+static unsigned char desk_bits[] = {
+   0xe7, 0xe7, 0xe7, 0x00, 0x00, 0xe7, 0xe7, 0xe7 };
