@@ -1,0 +1,4 @@
+#define desk_toggled_width 8
+#define desk_toggled_height 8
+static unsigned char desk_toggled_bits[] = {
+   0x00, 0x66, 0x66, 0x00, 0x00, 0x66, 0x66, 0x00 };
