@@ -1,0 +1,4 @@
+#define max_width 8
+#define max_height 8
+static unsigned char max_bits[] = {
+   0xff, 0xff, 0x81, 0x81, 0x81, 0x81, 0x81, 0xff };
