@@ -1,0 +1,4 @@
+#define max_toggled_width 8
+#define max_toggled_height 8
+static unsigned char max_toggled_bits[] = {
+   0xfc, 0x84, 0xbf, 0xbf, 0xa1, 0xe1, 0x21, 0x3f };
