@@ -1,0 +1,81 @@
+!! hello very simple and clean theme!
+
+!! Menu settings
+
+menu.title.bg:  raised solid 
+menu.items.bg.color: #d8d4d4
+menu.items.text.color: #000000
+menu.items.disabled.text.color: #737573
+menu.*.bg.color: #555566
+!! um..
+menu.items.*.bg: flat solid
+menu.*.text.color: #f6f6f6
+
+!! focused window settings
+
+!! window titlebar
+window.active.title.bg: raised solid 
+window.active.title.bg.color: #555566
+window.active.label.bg: parentrelative
+window.active.label.text.color: #f6f6f6
+
+!! focus grip/handle
+window.active.handle.bg: flat solid 
+window.active.handle.bg.color: #d8d4d4
+window.active.grip.bg: parentrelative
+
+!! focus buttons
+window.active.button.unpressed.bg: parentrelative
+window.active.button.unpressed.image.color: #ffffff
+
+window.active.button.*.bg: flat solid 
+!ack the hilight!
+window.active.button.*.bg.color: #777777
+window.active.button.*.image.color: #d8d4d4
+window.active.button.toggled.bg: parentrelative
+window.active.button.toggled.image.color: #ffffff
+
+window.active.button.hover.image.color: #ffffff
+window.active.button.disabled.bg: parentrelative
+window.active.button.disabled.image.color: #555566
+
+!! unfocused window settings
+
+!! window unfocus titlebar
+window.inactive.title.bg: flat solid
+window.inactive.title.bg.color: #d8d4d4
+window.inactive.label.bg: parentrelative
+window.inactive.label.text.color: #333333
+
+!! handle/grip
+window.inactive.handle.bg: flat solid
+window.inactive.handle.bg.color: #d8d4d4
+window.inactive.grip.bg: parentrelative
+
+!!buttons
+window.inactive.button.*.bg: parentrelative
+window.inactive.button.*.image.color: #333333
+window.inactive.button.disabled.image.color:  #d8d4d4
+
+
+!! Global fun settings
+
+!! where?
+*.justify: left
+
+!! colours
+window.*.client.color: #d8d4d4
+border.color: #222222
+
+!! width
+borderWidth: 1
+padding.width: 1
+window.handle.width: 4
+window.client.padding.width: 0
+menu.overlap: 8
+
+!! fonts
+window.active.label.text.font: Bitstream Vera Sans:pixelsize=13:bold
+menu.title.text.font: Bitstream Vera Sans:pixelsize=13:bold
+menu.items.font: Bitstream Vera Sans:pixelsize=13
+
